Mobile nav: Fix another wee spacing issue

--- a/src/scss/layout/_mobile-menu.scss
+++ b/src/scss/layout/_mobile-menu.scss
@@ -24,6 +24,7 @@
   }
 
   .slidemenu__other-links {
+    margin-left: 32px;
     li a:before {
       font-family: "uos";
       padding-right: 15px;
